# stips

./: Cargo.toml  README.md
src/: main.rs
tests/: cli_test.rs
