[package]
name = "stips"
version = "0.1.2"
edition = "2024"
description = "OpenRouter CLI — credits, usage, key management"
license = "MIT"
repository = "https://github.com/terry-li-hm/stips"
keywords = ["cli", "openrouter", "ai", "credits"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
ureq = { version = "3", features = ["json"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dev-dependencies]
assert_cmd = "2.1.2"
predicates = "3.1.4"
